--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,4 @@ spring.datasource.password = 12345
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto=none
-eureka.client.service-url.defaultZone=http://http://20.197.231.12/:8761/eureka
+eureka.client.service-url.defaultZone=http://http://20.197.231.12:8761/eureka
