--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=servicio-persona
 server.port=8002
-spring.datasource.url = jdbc:mysql://localhost:3306/ido_persona
-spring.datasource.username = root
-spring.datasource.password = 12345
+spring.datasource.url = jdbc:mysql://database.mysql.database.azure.com:3306/ido_persona
+spring.datasource.username = admi@helena-database
+spring.datasource.password = Helena2022
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto=none
-eureka.client.service-url.defaultZone=http://http://20.197.231.12:8761/eureka
+eureka.client.service-url.defaultZone=http://20.197.231.12:8761/eureka
