--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=servicio-persona
 server.port=8002
-spring.datasource.url = jdbc:mysql://database.mysql.database.azure.com:3306/ido_persona
+spring.datasource.url = jdbc:mysql://helena-database.mysql.database.azure.com:3306/ido_persona
+
 spring.datasource.username = admi@helena-database
 spring.datasource.password = Helena2022
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
